Update Java version, refactor commands, and add save feature
Updated the project to use Java 17 and upgraded Maven plugin versions. Refactored the WorldCommand class location and removed the multiverse package. Added a new 'save' subcommand with a confirmation screen to facilitate world saves.